# UBC_GameIntelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
Gymnasium_extra_environments/: chess-gym-v2.url
Gymnasium_extra_environments/gym-8Puzzle/: README.md  pyproject.toml
Gymnasium_extra_environments/gym-RiverCrossing/: README.md  pyproject.toml
Gymnasium_extra_environments/gym-StockTrading/: Readme.md  main.py  pyproject.toml
SimpleBaselines/agent/: AbstractRLAgent.py  AbstractTreeGraphAgent.py
SimpleBaselines/frontier/: Frontier.py  Node.py
SimpleBaselines/memory/: MixedExperienceReplay.py  NaiveExperienceReplay.py  PrioritizedExperienceReplay.py
SimpleBaselines/nn/: ConvolutionalNetwork.py  DuelingNeuralNetwork.py  DuelingNeuralNetwork_OLD.py  MultiDiscreteNeuralNetwork.py  NeuralNetwork.py
SimpleBaselines/reporting/: RLReport.py  Report.py  TreeGraphReport.py
SimpleBaselines/states/: State.py
examples/0_introduction/: first_steps_python.py
examples/1_frontier_expansion/: frontier_expansion_8Puzzle.py  frontier_expansion_RiverCrossing.py
examples/2_blind_search/: Blind_Search_discussion.py  Breadth_First_Search.py  Depth_First_Search.py  Depth_Limited_Search.py  Iterative_Deepening_Search.py  Uniform_Cost_Search.py
examples/7_RL/: 01_tutorial_cartPole.py  02_tutorial_frozenLakeRandom.py  03_tutorial_deterministicFrozenLakeRandom.py  04_tutorial_deterministicFrozenLake_QLearning.py  05_tutorial_StochasticFrozenLake_QLearning.py  06_tutorial_StochasticFrozenLake_StochasticQLearning.py  07_tutorial_StochasticFrozenLake_EpsilonGreedyQLearning.py  (+9 more)
(+56 files in other folders)
